Fix flexbox for news slider on mobile

--- a/_sass/components/detail.scss
+++ b/_sass/components/detail.scss
@@ -50,6 +50,28 @@
 			left: .5rem;
 			font-size: .8rem;
 		}
+
+		.headline-gotoContent {
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			margin-left: -1.5rem;
+			animation: bouncing-arrow 1.5s ease-out infinite;
+
+			.material-icons {
+				font-size: 3rem;
+			}
+		}
+
+		@keyframes bouncing-arrow {
+			0%, 100% {
+				transform: translateY(0);
+			}
+
+			50% {
+				transform: translateY(-0.685em);
+			}
+		}
 	}
 	
 }
@@ -57,24 +79,31 @@
 // Small size screens
 @media (max-width: 600px) {
 
+	#detailContent {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		//overflow-x: hidden;
+	}
+
 	.drops-mobile-carousel {
 		display: flex;
-		align-items: stretch;
-		justify-content: flex-start;
+		align-items: center;
+		justify-content: center;
 		position: relative;
-		box-sizing: border-box;
-		width: 1000px;
-		overflow: hidden;
+		left: 85vw;
 
 		.drop {
-			display: flex;
-			align-items: stretch;
 			width: 90vw;
 			height: calc(100vh - 70px);
+			display: flex;
+			align-items: stretch;
+			justify-content: center;
 			overflow: hidden;
 			position: relative;
-			-webkit-transform: scale(0.9) translateY(-2rem);
-			transform: scale(0.9) translateY(-2rem);
+			-webkit-transform: scale(0.9) translateY(0);
+			transform: scale(0.9) translateY(0);
 			opacity: .8;
 			cursor: pointer;
 			pointer-events: none;
@@ -86,6 +115,12 @@
 				transform: scale(1) translateY(0);
 				opacity: 1;
 			}
+
+			.col {
+				display: flex;
+				align-items: stretch;
+				justify-content: center;
+			}
 		}
 	}
 	
@@ -93,6 +128,11 @@
 
 // Medium size
 @media (min-width: 601px) and (max-width: 991px) {
+
+	.card.headline {
+		display: flex;
+		align-items: center;
+	}
 	
 }
 
@@ -112,6 +152,8 @@
 
 	.headline {
 		margin: 0;
+		display: flex;
+		align-items: center;
 		height: calc(100vh - 64px);
 
 		.headline-title {
